<resources>
    <string name="app_name">Item List</string>
    <string name="item_image">Item Image</string>
    <string name="textview">TextView</string>
    <string name="naira">₦</string>
    <string name="buy_now">BUY NOW</string>
    <string name="lorem_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitant morbi tristique senectus et netus et malesuada fames.Sodales ut eu sem integer. Accumsan tortor posuere ac ut consequat semper viverra nam libero. \n\nUltricies lacus sed turpis tincidunt id. Vitae tempus quam pellentesque nec nam aliquam sem et tortor. Vitae nunc sed velit dignissim sodales ut eu sem integer. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Eu nisl nunc mi ipsum faucibus vitae aliquet. \n\nNec tincidunt praesent semper feugiat. Ut tellus elementum sagittis vitae et leo duis ut. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Vitae sapien pellentesque habitant morbi tristique. Aliquet porttitor lacus luctus accumsan tortor posuere. \n\nUltricies lacus sed turpis tincidunt id. Vitae tempus quam pellentesque nec nam aliquam sem et tortor. Vitae nunc sed velit dignissim sodales ut eu sem integer. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Eu nisl nunc mi ipsum faucibus vitae aliquet. \n\nNec tincidunt praesent semper feugiat. Ut tellus elementum sagittis vitae et leo duis ut. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Vitae sapien pellentesque habitant morbi tristique. Aliquet porttitor lacus luctus accumsan tortor posuere. \n\nUltricies lacus sed turpis tincidunt id. Vitae tempus quam pellentesque nec nam aliquam sem et tortor. Vitae nunc sed velit dignissim sodales ut eu sem integer. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Eu nisl nunc mi ipsum faucibus vitae aliquet. \n\nNec tincidunt praesent semper feugiat. Ut tellus elementum sagittis vitae et leo duis ut. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Vitae sapien pellentesque habitant morbi tristique. Aliquet porttitor lacus luctus accumsan tortor posuere. </string>
    <string name="title_activity_item">itemActivity</string>
    <string name="description">Description</string>
</resources>
