<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".itemActivity"
    tools:showIn="@layout/activity_item">
    <View
        android:id="@+id/buybtn"
        android:layout_width="152dp"
        android:layout_height="41dp"
        android:background="@drawable/topborder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_now"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/buybtn"
        app:layout_constraintEnd_toEndOf="@+id/buybtn"
        app:layout_constraintStart_toStartOf="@+id/buybtn"
        app:layout_constraintTop_toTopOf="@+id/buybtn" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buybtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buybtn" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                app:cardBackgroundColor="@color/primary"
                app:cardElevation="6dp"
                app:cardMaxElevation="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/productPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/textview"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/naira"
                        app:layout_constraintTop_toTopOf="@+id/naira"
                        tools:layout_conversion_absoluteHeight="19dp"
                        tools:layout_conversion_absoluteWidth="59dp" />

                    <ImageView
                        android:id="@+id/productPic"
                        android:layout_width="122dp"
                        android:layout_height="115dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        android:contentDescription="@string/item_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/image"
                        tools:layout_conversion_absoluteHeight="150dp"
                        tools:layout_conversion_absoluteWidth="150dp" />

                    <TextView
                        android:id="@+id/productName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textview"
                        android:textColor="@color/colorPrimary"
                        android:textSize="28sp"
                        app:layout_constraintStart_toStartOf="@+id/naira"
                        app:layout_constraintTop_toTopOf="@+id/productPic" />

                    <TextView
                        android:id="@+id/naira"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/naira"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/productPic"
                        app:layout_constraintStart_toEndOf="@+id/productPic"
                        app:layout_constraintTop_toBottomOf="@+id/productName" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/lorem_txt"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>